# keateka-backend

./: .dockerignore  .env  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  Backend directory structure.txt5  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  config.py  database.py  main.py
app/api/auth/: dependencies.py  exceptions.py  models.py  routes.py  schemas.py  security.py  service.py
app/api/jobs/: cache.py  dependencies.py  events.py  exceptions.py  models.py  permissions.py  repository.py  resources.py  routes.py  schemas.py  service.py  time_tracking.py  websocket.py
app/api/location/: core.py  maps.py  models.py  routes.py  routing.py  schemas.py  service.py
app/api/notifications/: exceptions.py  firebase.py  models.py  routes.py  schemas.py  service.py
app/api/payments/: __init__.py  core.py  dependencies.py  exceptions.py  models.py  mpesa.py  routes.py  schemas.py  service.py
app/api/shared/: config.py  database.py  exceptions.py
app/api/storage/: dependencies.py
app/core/: config.py  deps.py  notifications.py  redis_client.py  security.py
app/features/auth/: dependencies.py  exceptions.py  models.py  routes.py  schemas.py  security.py  service.py
app/features/jobs/: dependencies.py  exceptions.py  models.py  permissions.py  repository.py  routes.py  schemas.py  service.py  time_tracking.py  websocket.py
app/features/location/: maps.py  models.py  routes.py  routing.py  schemas.py  service.py
app/features/notifications/: exceptions.py  firebase.py  models.py  routes.py  service.py
app/features/payments/: core.py  dependencies.py  exceptions.py  models.py  mpesa.py  routes.py  schemas.py  service.py
app/middleware/: rate_limiter.py
app/migrations/: env.py
app/migrations/versions/: 9b900a086fe3_migrations_for_auth_jobs_and_.py
app/models/: base.py  job.py  user.py
app/schemas/: job.py  payment.py  user.py
app/services/: matching.py  mpesa.py  notifications.py
app/shared/: config.py  database.py
app/shared/middleware/: error_handler.py  rate_limiter.py  request_id.py  timing.py  websocket.py
app/shared/utils/: cache.py  security.py  time.py
app/tests/: conftest.py  core.py
app/tests/shared/: utils.py
app/tests/steps/: steps_core.py
app/utils/: cache.py
docs/api/: openapi.yaml
migrations/: env.py
migrations/versions/: c1bb14995d5c_initial_migration.py
tests/: conftest.py  utils.py
tests/shared/: environment.py  utils.py
tests/unit/: test_auth_service.py  test_base.py  test_exceptions.py  test_jobs_service.py  test_location_service.py  test_payments.py
(+11 files in other folders)
